# florentine-abbot

./: .gitignore  README.by.md  README.md  README.ru.md  pyproject.toml  test_prv.jpg_original  test_real_historian.py
.github/workflows/: build.yml
docs/: README.md  README.ru.md  change_log.md
docs/by/: naming.md
docs/en/: digital_workflow.md  naming.md  project_review.md  prospects.md  scanning.md
docs/ru/: digital_workflow.md  naming.md  project_review.md  prospects.md  scanning.md
misc/: roadmap.md
scripts/: setup.py
src/archive_keeper/: __init__.py  cli.py  config.py  config.template.json  engine.py  keeper.py  models.py  processor.py  scanner.py  store.py  watcher.py
src/archive_plugin/: config.template.json  plugin.py
src/common/: archive_metadata.py  auth.py  config.template.json  config_utils.py  constants.py  database.py  db.py  exifer.py  formats.template.json  formatter.py  historian.py  log_paths.py  logger.py  logging_config.py  metadata.py  metadata.template.json  naming.py  project_config.py  provider.py  router.py  routes.template.json  schema.py  tagger.py  tags.py  tags.template.json  task_store.py  utils.py  version.py  xmp_history.py
src/content_importer/: classes.py  image_organizer.py  planner.py  scan_importer.py  scan_validator.py  store.py
src/face_detector/: __init__.py  __main__.py  cli.py  clusterer.py  config.py  config.template.json  constants.py  detector.py  engine.py  previewer.py  store.py  visualizer.py
src/face_detector/detectors/: __init__.py
src/face_detector/detectors/insightface/: __init__.py  detector.py
src/face_recognizer/: __init__.py  __main__.py  classes.py  cli.py  clusterer.py  config.py  config.template.json  constants.py  detector.py  previewer.py  processor.py  provider.py  recognizer.py  schema.py  store.py  watcher.py
src/face_recognizer/detectors/: __init__.py
src/face_recognizer/detectors/insightface/: __init__.py  config.template.json  detector.py
src/file_organizer/: __init__.py  __main__.py  cli.py  config.py  config.template.json  constants.py  metadata.py  monitor.py  organizer.py  parser.py  preview_maker.py  previewer.py  processor.py  routes.template.json  tags.template.json  validator.py  watcher.py
src/filename_metadata_extractor/: __init__.py  parser.py  plugin.py  validator.py
src/preview_maker/: __init__.py  __main__.py  classes.py  cli.py  config.py  config.template.json  constants.py  converter.py  core.py  maker.py  processor.py  provider.py  store.py  watcher.py
src/scan_batcher/: __main__.py  batch.py  calculator.py  cli.py  constants.py  exifer.py  parser.py  recorder.py  workflow.py
src/scan_batcher/workflows/: __init__.py
src/scan_batcher/workflows/patch/: __init__.py  workflow.py
src/scan_batcher/workflows/vuescan/: workflow.py
src/setup_runner/: cli.py  runner.py
src/tile_cutter/: __init__.py  __main__.py  classes.py  cli.py  config.py  config.template.json  constants.py  cutter.py  processor.py  provider.py  store.py  watcher.py
src/ui/web/: app.py  daemon_manager.py  deps.py  routes.py  setup_store.py  store.py
src/ui/web/frontend/: admin.html  index.html  package-lock.json  package.json  setup.html  vite.config.js
src/ui/web/frontend/src/: App.vue  AppAdmin.vue  admin-main.js  api.js  main.js  routeErrors.js  router-admin.js  router-setup.js  router.js  setup-main.js  theme.js
src/ui/web/frontend/src/assets/: theme.css
src/ui/web/frontend/src/components/: ConfirmDialog.vue  FormatEditDialog.vue  InfoPanel.vue  MapPanel.vue  MapSurface.vue  PeoplePanel.vue  SkeletonThumb.vue
src/ui/web/frontend/src/icons/: FolderIcon.vue
src/ui/web/routes/: __init__.py  auth.py  collections.py  config.py  daemons.py  faces.py  faces_common.py  imports.py  map.py  setup.py  tasks.py  upload.py  users.py
src/ui/web/routes/collections/: __init__.py
src/ui/web/routes/files/: __init__.py  common.py  faces.py  history.py  metadata.py  navigation.py
src/ui/web/templates/: _daemons.html  base.html  index.html
tests/: __init__.py  conftest.py  generate_scan_data.py  test_historian.py  test_manual_pipeline.py  test_metadata_flow.py  test_pipeline.py
tests/archive_keeper/: test_keeper.py  test_processor.py  test_scanner.py  test_store.py  test_watcher.py
tests/archive_plugin/: test_integration.py  test_parser.py  test_plugin.py  test_validator.py
tests/common/: fake_archive_metadata.py  fake_exifer.py  store_exifer.py  test_archive_metadata.py  test_database.py  test_exifer.py  test_formatter.py  test_historian.py  test_metadata.py  test_project_config.py  test_router.py  test_tagger.py  test_task_store.py  test_utils.py
tests/content_importer/: conftest.py  test_image_organizer.py  test_planner.py  test_scan_importer.py  test_scan_validator.py
tests/face_detector/: test_clusterer.py  test_store.py
tests/face_recognizer/: test_clusterer.py  test_processor.py  test_recognizer.py  test_recognizer_db.py  test_store.py  test_watcher.py
tests/file_organizer/: test_exiftool_compliance.py  test_integration.py  test_leap_year.py  test_metadata.py  test_organizer.py  test_organizer_custom_formatting.py  test_parser.py  test_preview_maker.py  test_processor.py  test_validator.py
tests/filename_metadata_extractor/: test_exiftool_compliance.py  test_integration.py  test_parser.py  test_plugin.py  test_validator.py
tests/integration/: test_metadata_flow.py
tests/preview_maker/: test_maker.py  test_maker_db.py  test_preview_maker.py  test_processor.py  test_store.py  test_watcher.py
tests/scan_batcher/: __init__.py  fake_metadata_workflow.py  fake_workflow.py  test_workflow.py
tests/tile_cutter/: test_cutter.py  test_cutter_db.py  test_processor.py  test_store.py  test_watcher.py
tests/ui/web/: test_config_routes.py  test_faces_routes.py  test_files_routes.py  test_map_routes.py  test_setup_store.py  test_store.py  test_tasks_routes.py
(+41 files in other folders)
