[project]
name = "florentine-abbot"
dynamic = ["version"]
description = "A suite of tools for archival scanning and digital workflow automation."
authors = [
    { name="Andrey Nalivayev", email="nalivayev@gmail.com" }
]
keywords = ["vuescan", "scanning", "automation", "archiving", "exif", "metadata"]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "Pillow>=10.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "sqlalchemy>=2.0.0"
]

[project.scripts]
scan-batcher = "scan_batcher.cli:main"
file-organizer = "file_organizer.cli:main"
preview-maker = "preview_maker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "scan_batcher",
    "scan_batcher.workflows",
    "scan_batcher.workflows.vuescan",
    "file_organizer",
    "preview_maker",
    "common",
]

[tool.setuptools.package-data]
"scan_batcher.workflows.vuescan" = ["*.ini"]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
